import { fireEvent } from '@testing-library/react';
import { Provider } from 'react-redux';

// components
import ColumnPosition from './ColumnPosition';

// mocks
import { elementMock, pageBuilderStateMock, selectedElementMock } from 'test/mocks/reducer/pageBuilderMock';

// others
import { REDUCER_KEY as PAGE_BUILDER } from 'store/pageBuilder/actionsType';

// store
import { configureStore } from 'store/store';

// types
import { AlignmentHorizontal, AlignmentVertical, E2EAttribute, KeyboardKeys } from 'types';

// utils
import { customRender, getByE2EAttribute } from 'test';

const currentPage = pageBuilderStateMock[PAGE_BUILDER].pages['0'];
const stateMock = {
  ...pageBuilderStateMock,
  [PAGE_BUILDER]: {
    ...pageBuilderStateMock[PAGE_BUILDER],
    pages: {
      ...pageBuilderStateMock[PAGE_BUILDER].pages,
      ['0']: {
        ...currentPage,
        elements: {
          ...currentPage.elements,
          ['-1']: {
            ...currentPage.elements['-1'],
            children: [elementMock.id],
          },
          [elementMock.id]: {
            ...elementMock,
          },
        },
        selectedElements: [selectedElementMock],
      },
    },
  },
};

describe('ColumnPosition snapshots', () => {
  it('should render ColumnPosition', () => {
    // mock
    const store = configureStore(stateMock);

    // before
    const { asFragment } = customRender(
      <Provider store={store}>
        <ColumnPosition />
      </Provider>,
    );

    // result
    expect(asFragment()).toMatchSnapshot();
  });

  it('should render when values are mixed', () => {
    // mock
    const store = configureStore({
      ...stateMock,
      [PAGE_BUILDER]: {
        ...stateMock[PAGE_BUILDER],
        pages: {
          ['0']: {
            ...stateMock[PAGE_BUILDER].pages['0'],
            elements: {
              ...stateMock[PAGE_BUILDER].pages['0'].elements,
              ['-1']: {
                ...stateMock[PAGE_BUILDER].pages['0'].elements['-1'],
                children: ['test-1', 'test-2'],
              },
              ['test-2']: {
                ...elementMock,
                coordinates: { x: 100, y: 100 },
                id: 'test-2',
              },
            },
            selectedElements: [
              ...stateMock[PAGE_BUILDER].pages['0'].selectedElements,
              { ...selectedElementMock, id: 'test-2' },
            ],
          },
        },
      },
    });

    // before
    const { asFragment } = customRender(
      <Provider store={store}>
        <ColumnPosition />
      </Provider>,
    );

    // result
    expect(asFragment()).toMatchSnapshot();
  });

  it('should render when some element has alignment', () => {
    // mock
    const store = configureStore({
      ...stateMock,
      [PAGE_BUILDER]: {
        ...stateMock[PAGE_BUILDER],
        pages: {
          ['0']: {
            ...stateMock[PAGE_BUILDER].pages['0'],
            elements: {
              ...stateMock[PAGE_BUILDER].pages['0'].elements,
              ['-1']: {
                ...stateMock[PAGE_BUILDER].pages['0'].elements['-1'],
                children: ['test-1', 'test-2'],
              },
              ['test-2']: {
                ...elementMock,
                alignment: {
                  horizontal: AlignmentHorizontal.center,
                  vertical: AlignmentVertical.center,
                },
                coordinates: { x: 100, y: 100 },
                id: 'test-2',
              },
            },
            selectedElements: [
              ...stateMock[PAGE_BUILDER].pages['0'].selectedElements,
              { ...selectedElementMock, id: 'test-2' },
            ],
          },
        },
      },
    });

    // before
    const { asFragment } = customRender(
      <Provider store={store}>
        <ColumnPosition />
      </Provider>,
    );

    // result
    expect(asFragment()).toMatchSnapshot();
  });
});

describe('ColumnPosition behaviors', () => {
  it('should change positions X & Y when enter value on input', () => {
    // mock
    const store = configureStore(stateMock);

    // before
    const { container } = customRender(
      <Provider store={store}>
        <ColumnPosition />
      </Provider>,
    );

    // find
    const inputX = getByE2EAttribute(container, E2EAttribute.textFieldInput, 'x');
    const inputY = getByE2EAttribute(container, E2EAttribute.textFieldInput, 'y');

    // action
    fireEvent.click(inputX);
    fireEvent.change(inputX, { target: { value: '100' } });
    fireEvent.keyDown(inputX, { key: KeyboardKeys.enter });
    fireEvent.blur(inputX);
    fireEvent.click(inputY);
    fireEvent.change(inputY, { target: { value: '100' } });
    fireEvent.keyDown(inputY, { key: KeyboardKeys.enter });
    fireEvent.blur(inputY);

    // result
    expect(store.getState()[PAGE_BUILDER].pages['0'].elements['test-1'].coordinates).toStrictEqual({
      x: 100,
      y: 100,
    });
  });

  it('should change positions X & Y when triger ScrubbableInput', () => {
    // mock
    const store = configureStore(stateMock);
    const mouseMoveEvent = new MouseEvent('mousemove', {
      bubbles: true,
      cancelable: true,
      shiftKey: false,
    });
    Object.defineProperty(mouseMoveEvent, 'movementX', { value: -100 });

    // before
    const { container } = customRender(
      <Provider store={store}>
        <ColumnPosition />
      </Provider>,
    );

    // find
    const scrubbableInputX = getByE2EAttribute(container, E2EAttribute.scrubbableInput, 'x');
    const scrubbableInputY = getByE2EAttribute(container, E2EAttribute.scrubbableInput, 'y');

    // action
    fireEvent.mouseDown(scrubbableInputX, { clientX: 0, clientY: 0 });
    window.dispatchEvent(mouseMoveEvent);
    fireEvent.mouseUp(scrubbableInputX);
    fireEvent.mouseDown(scrubbableInputY, { clientX: 0, clientY: 0 });
    window.dispatchEvent(mouseMoveEvent);
    fireEvent.mouseUp(scrubbableInputY);

    // result
    expect(store.getState()[PAGE_BUILDER].pages['0'].elements['test-1'].coordinates).toStrictEqual({
      x: -50,
      y: -50,
    });
  });
});
